# pynumwork

./: README.md  setup.cfg
src/pynumwork/: __init__.py
src/pynumwork.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
